changed export path

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../../media/tuisku/Tikku Win/2D Mastermind_opengl.exe"
+export_path="../../../../home/tuisku/Desktop/Game Exports/win/2D Mastermind_opengl.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./2DMastermind.x86_64"
+export_path="../../../../home/tuisku/Desktop/Game Exports/lin/2DMastermind.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
